# VideoProcessor

./: pyproject.toml
src/application/: error.py
src/application/api/: app.py  exception_handlers.py  schemas.py
src/application/api/routers/: __init__.py
src/application/api/routers/user/: __init__.py  user_router.py  user_schemas.py
src/application/api/types/: pydantic_external_id.py
src/application/di/: injector.py
src/application/di/modules/: __init__.py  external_services_module.py  user_module.py
src/application/interfaces/: __init__.py  email_sender.py  file_storage.py  password_hasher.py
src/application/use_cases/user/register/: dto.py  user_register_uc.py
src/config/: settings.py
src/domain/__shared/aggregate_root/: aggregate_root.py
src/domain/__shared/entity/: __init__.py  entity.py
src/domain/__shared/error/: __init__.py
src/domain/__shared/interfaces/: __init__.py  repository.py
src/domain/__shared/validator/: __init__.py  error.py  pydantic_validator.py  validator.py
src/domain/__shared/value_objects/: __init__.py  external_entity_id.py  value_object.py
src/domain/__shared/value_objects/email/: email.py  email_validator.py
src/domain/user/: __init__.py  repository.py  user_entity.py  user_entity_validator.py
src/domain/user/entity/: __init__.py  user_entity.py
src/domain/video/: __init__.py  video_entity.py  video_entity_validator.py
src/infra/: bcrypt_password_hasher.py  error.py  s3_file_storage.py  ses_email_sender.py
src/infra/database/beanie/: __init__.py  setup.py
(+9 files in other folders)
